[package]
name = "poline-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
poline-core = { path = "../poline-core"}
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2"}
serde-wasm-bindgen = "0.5.0"
serde = { version = "1.0.159", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
